2005-09-13  Tzanko Matev  <tsanko@gmail.com>

	* IPythonLog.py (IPythonLog.filename_iter): Changed generation of
	figure names to avoid 'filename.nbk_1.png' names. This resolves
	ticket #29.

	* PythonPlugin.py (PythonNotebookViewPlugin): 
	* PythonWidget.py (Shell.OnKeyDown): Added history. The user can
	access it using Ctrl-Up/Alt-P, Ctrl-Down/Alt-N. This resolves 
	ticket 	#12.

	* PythonPlugin.py (PythonNotebookView.Update, PromptLen, CanEdit):
	Added a variable self.promptlens, which contains the lenghts of
	the prompts and is generated when Update is called. This slightly
	optimizes PromptLen and CanEdit. Added other small optimisations
	to CanEdit. As a result typing should get a bit faster. See ticket
	#11 for more info.

	
2005-09-12  Tzanko Matev  <tsanko@gmail.com>

	* nbdoc/notebook.py (Notebook.__init__): Changed to support
	multiple logs in a document

	* nbshell/Sheet.py (Sheet.InsertXML): 
	* nbshell/frame.py (ipnFrame.SetUpMenu, ipnFrame.OnInsertXML): Added a way
	to insert xml editing controls, using the Insert menu. An xml
	editing control has a red margin.

	* nbshell/frame.py (ipnFrame.SetUpMenu): Changed terminology in menu items
	and status lins messages, "cell" is replaced with "block"

	* tutorial.pybk: Started making a tutorial. It shows how you can
	use the __app object in the log namespace to make the notebooks
	more dynamic.


2005-09-12  Tzanko Matev  <tsanko@gmail.com>

	* Sheet.py (Sheet.__update_celllist): Fixed a bug where a text
	window would not be created if the list of <para> elements was at
	the end of the document

	* textplugin.py (TextDocumentPlugin.get_xml_text): Fixed escaping
	of the test string.

	* PlainTextPlugin.py (PlainTextCtrl.__init__): Changed the colour
	of the margin to pale red. Windows of this type cannot be created
	by nbshell interface at the moment, however they will be shown if
	a tag in the notebook document is unsupported.

2005-09-12  Tzanko Matev  <tsanko@gmail.com>

	* textplugin.py: 